# Quorum

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/api/: __init__.py  main.py  models.py  paths.py  readers.py
apps/api/routers/: debates.py  live.py  payout.py  runner.py  shapley.py
apps/orchestrator/: __init__.py  cli.py  mcp_client.py  persistence.py  replay.py  runner.py  settings.py  state.py  supervisor.py  tool_registry.py  vote.py
apps/orchestrator/agents/: __init__.py  news_agent.py  risk_agent.py  shapley_agent.py  tech_agent.py
apps/orchestrator/tools/: __init__.py  dry_run.py  dummy_market.py  dummy_news.py  dummy_risk.py  fork_evidence.py  freqtrade.py  jupiter_quote.py  omniwire.py  payout.py  pyth_gate.py  shapley_history.py
apps/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: ProtocolTelemetryFooter.tsx
apps/web/src/lib/: api.ts  useLiveDebates.ts
apps/web/src/pages/: DebateDetail.tsx  Debates.tsx  Observatory.tsx  Payout.tsx  Shapley.tsx
configs/: omniwire_feeds.json
deploy/: freqtrade.service  install.sh  quorum-api.service  quorum-runner.service  uninstall.sh
tests/: test_debate.py  test_debate_scenarios.py  test_mcp_clients.py  test_offline.py
